--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/normalize.css" />
-    <link 
-  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
-  rel="stylesheet"  type='text/css'>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Poppins:wght@500&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Poppins:wght@500&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css" />
-    <title>Japan</title>
+    <title>Patagonia</title>
   </head>
   <body>
  <nav class="navigation">
@@ -20,13 +17,12 @@
         <li class="navigation__text-text"><a class="navigation__text-link" href="#">Works</a></li>
         <li class="navigation__text-text"><a class="navigation__text-link" href="#">Services</a></li>
         <li class="navigation__text-text"><a class="navigation__text-link" href="#">Contacts</a></li>
-        <li class="navigation__text-text"><i class=" fa-solid fa-ellipsis"></i></li>
     </ul>
  </nav>
       <div class="main">
-        <h2 class="main__title">Japan</h2>
+        <h2 class="main__title">Patagonia</h2>
         <p class="main__text">Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcor.</p>
-        <img class="main__pic" src="./images/landscape-bg.png" alt="Landscape">
+        <img class="main__pic" src="./images/horses-bg.jpg" alt="Horses">
       </div>  
 </body>
 </html>
